# real-time-ray-tracing-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
.githooks/: pre-commit
src/: main.cpp
src/core/: AABB.cpp  AABB.hpp  Camera.cpp  Camera.hpp  CameraConfig.hpp  DynamicCamera.cpp  DynamicCamera.hpp  HitRecord.cuh  HitRecord.hpp  HitRecordConversions.cu  HitRecordConversions.cuh  Hittable.cu  Hittable.cuh  Hittable.hpp  HittableConversions.cuh  HittableConverter.cuh  HittableList.cpp  HittableList.cu  HittableList.cuh  HittableList.hpp  HittableListConversions.cu  HittableListConversions.cuh  HittableTypes.hpp  Ray.cpp  Ray.cuh  Ray.hpp  RayConversions.cu  RayConversions.cuh  ScatterRecord.cuh  ScatterRecord.hpp  ScatterRecordConversions.cuh  StaticCamera.cpp  StaticCamera.hpp  Vec3Types.cuh
src/core/camera/: Camera.cpp  Camera.hpp  CameraConfig.hpp  CameraKernelWrappers.cu  CameraKernelWrappers.cuh  CameraKernels.cu  CameraKernels.cuh  DynamicCamera.cpp  DynamicCamera.hpp  StaticCamera.cpp  StaticCamera.hpp
src/input/: CLI.cpp  CLI.hpp
src/optimization/: AABB.cpp  AABB.cuh  AABB.hpp  AABBConversions.cu  AABBConversions.cuh  AABBUtility.cuh  AABBUtility.hpp  BVHNode.cpp  BVHNode.cu  BVHNode.cuh  BVHNode.hpp  BVHNodeConversions.cuh
src/scene/: BVHNode.cpp  BVHNode.hpp  CudaSceneInitialization.cuh  DielectricMaterial.cpp  LambertianMaterial.hpp  MetalMaterial.cpp  MetalMaterial.hpp  Scene.hpp  SceneConversions.cuh  Sphere.cpp  Sphere.hpp
src/scene/materials/: DielectricMaterial.cpp  DielectricMaterial.hpp  DiffuseLightMaterial.cpp  DiffuseLightMaterial.hpp  IsotropicMaterial.cpp  IsotropicMaterial.hpp  LambertianMaterial.cpp  LambertianMaterial.hpp  Material.cuh  Material.hpp  MaterialConversions.cu  MaterialConversions.cuh  MaterialConverter.cuh  MetalMaterial.cpp  MetalMaterial.hpp
src/scene/mediums/: ConstantMedium.cpp  ConstantMedium.cu  ConstantMedium.cuh  ConstantMedium.hpp  ConstantMediumConversions.cuh
src/scene/objects/: Plane.cpp  Plane.cu  Plane.cuh  Plane.hpp  PlaneConversions.cu  PlaneConversions.cuh  PlaneUtility.cuh  PlaneUtility.hpp  RotateY.cpp  RotateY.cu  RotateY.cuh  RotateY.hpp  RotateYConversions.cuh  Sphere.cpp  Sphere.cu  Sphere.cuh  Sphere.hpp  SphereConversions.cu  SphereConversions.cuh  Translate.cpp  Translate.cu  Translate.cuh  Translate.hpp  TranslateConversions.cuh
src/scene/textures/: CheckerTexture.cpp  CheckerTexture.hpp  ImageTexture.hpp  NoiseTexture.cpp  NoiseTexture.hpp  SolidColorTexture.cpp  SolidColorTexture.hpp  Texture.cu  Texture.cuh  Texture.hpp  TextureConversions.cu  TextureConversions.cuh  TextureConverter.cuh
src/util/: ColorUtility.hpp
src/util/math/: Vec3.hpp  Vec3Utility.hpp
src/utils/: ColorUtility.cu  ColorUtility.cuh  ColorUtility.hpp
src/utils/concurrency/: ThreadPool.hpp  ThreadTypes.hpp  WorkStealingDeque.hpp  WorkerThread.hpp
src/utils/math/: Interval.cu  Interval.cuh  Interval.hpp  IntervalConversions.cu  IntervalConversions.cuh  IntervalUtility.cuh  ONB.cu  ONB.cuh  ONB.hpp  ONBConversions.cu  ONBConversions.cuh  PDF.cu  PDF.cuh  PDF.hpp  PDFConversions.cuh  PDFTypes.hpp  PerlinNoise.cuh  PerlinNoise.hpp  PerlinNoiseConversions.cu  PerlinNoiseConversions.cuh  SimdOps.hpp  SimdTypes.hpp  Utility.cu  Utility.cuh  Utility.hpp  Vec3.cuh  Vec3.hpp  Vec3Conversions.cu  Vec3Conversions.cuh  Vec3Utility.cu  Vec3Utility.cuh  Vec3Utility.hpp
src/utils/memory/: CudaMemoryUtility.cuh  CudaSceneContext.cu  CudaSceneContext.cuh  CudaUniquePtr.cuh
